# dynamixel

./: CMakeLists.txt  README.md  package.xml
cfg/: DynamicServo.cfg
include/: comm_layer_defs.h  dynamixel.h
src/: dynamixel.cpp  scanner_node.cpp
src/tests/: servo_tests.cpp
src/util/: comm_tool.cpp  dynamixel_reset_server.cpp  set_gpio.bash
