<?xml version="1.0"?>
<package>
  <name>dynamixel</name>
  <version>0.1.2</version>
  <description>Provides access to the Dynamixel servo</description>

  <maintainer email="jacob.huesman@ndsu.edu">Jacob Huesman</maintainer>
  <author>Jacob Huesman</author>

  <license>BSD</license>

  <!--<url type="website">http://wiki.ros.org/apriltags_ros</url>
  <url type="bugtracker">https://github.com/RIVeR-Lab/apriltags_ros/issues</url>
  <url type="repository">https://github.com/RIVeR-Lab/apriltags_ros</url>-->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2</run_depend>
</package>
