<package format="2">
  <name>dynamixel</name>
  <version>0.1.2</version>
  <description>Provides access to the Dynamixel servo</description>

  <maintainer email="jacob.huesman@ndsu.edu">Jacob Huesman</maintainer>
  <author>Jacob Huesman</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>dynamic_reconfigure</depend>
</package>
